Local Properties & Data Binding

--- a/force-app/main/default/lwc/helloWorld/helloWorld.html
+++ b/force-app/main/default/lwc/helloWorld/helloWorld.html
@@ -1,3 +1,9 @@
 <template>
-    Hello World!
+    <lightning-card  title="Hello World">
+          <div class="slds-m-around_medium">{age}</div>
+          <div class="slds-m-around_medium">{fullName}</div>
+          <div class="slds-m-around_medium">{check}</div>
+          <div class="slds-m-around_medium">{detail.name}</div>
+          <div class="slds-m-around_medium">{detail.place}</div>
+    </lightning-card>
 </template>
